Fix post image alignment and caption size (#44)
This makes captions smaller and centres post images.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -634,12 +634,18 @@ article img {
     margin-right: -50vw;
 }
 
+article > figure {
+    display: flex;
+    justify-content: center;
+}
+
 article figure {
     margin: 0;
 }
 
 article figcaption {
     text-align: center;
+    font-size: 75%;
 }
 
 body {
